--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@mantine/core": "7.17.2",
     "@mantine/hooks": "7.17.2",
     "@next/bundle-analyzer": "^15.2.3",
+    "@supabase/ssr": "^0.6.1",
     "@tabler/icons-react": "^3.31.0",
+    "lucide": "^0.483.0",
+    "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0"
@@ -42,6 +45,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.11",
     "@types/react": "19.0.12",
+    "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "eslint": "^9.23.0",
     "eslint-config-mantine": "^4.0.3",
