--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@mantine/core": "7.17.2",
+    "@mantine/form": "^7.17.3",
     "@mantine/hooks": "7.17.2",
     "@next/bundle-analyzer": "^15.2.3",
     "@supabase/ssr": "^0.6.1",
