--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide": "^0.483.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "planby": "^1.1.7",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
